--- a/techtribes-web/web/WEB-INF/fragments/prelude.jspf
+++ b/techtribes-web/web/WEB-INF/fragments/prelude.jspf
@@ -8,7 +8,7 @@
 
 <html lang="en">
 <head>
-    <title>techtribes.je ${pageTitle}</title>
+    <title>${pageTitle}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="/favicon.ico">
